--- a/package.json
+++ b/package.json
@@ -12,17 +12,19 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "highlight.js": "^11.4.0",
+    "auth0-js": "^9.18.0",
     "axios": "^0.24.0",
     "firebase": "^9.6.2",
-    "auth0-js": "^9.18.0",    
+    "highlight.js": "^11.4.0",
     "markdown-to-jsx": "^7.1.2",
+    "material-ui-popup-state": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-material-ui-form-validator": "^3.0.0",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
+    "react-swipeable-views": "^0.14.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
