--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "material-ui-popup-state": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-error-boundary": "^3.1.4",
     "react-material-ui-form-validator": "^3.0.0",
     "react-paginate": "^8.1.0",
     "react-router": "^6.2.1",
